1st week: outline

--- a/main.tex
+++ b/main.tex
@@ -42,7 +42,18 @@
 
 \mainmatter{}
 
+\chapter{Introduction}
 \input{chapters/01_introduction}
+
+\chapter{State of the Art}
+\input{chapters/02_state_of_the_art}
+
+\chapter{Background}
+\input{chapters/03_background}
+
+\chapter{Implementation}
+\input{chapters/04_implementation}
+
 % TODO: add more chapters here
 
 \appendix{}
