--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,7 +1,147 @@
-@book{latex,
-  title = {LaTeX : A Documentation Preparation System User's Guide and Reference Manual},
-  publisher = {Addison-Wesley Professional},
-  year = {1994},
-  author = {Leslie Lamport}
+@inproceedings{hw_sw_codesign,
+    author = {El-Moursy, Magdy A. and Sheirah, Ayman and Safar, Mona and Salem, Ashraf},
+    title = {Efficient embedded SoC hardware/software codesign using virtual platform},
+    booktitle = {2014 9th International Design and Test Symposium (IDT)},
+    year = {2014},
+    volume={},
+    number={},
+    pages={36-38},
+    keywords={Hardware;Software;System-on-chip;Time-domain analysis;Debugging;Registers;Time-varying systems;SystemC;TLM;Co-Design;Co-Simulation;Virtual Platform},
+    doi={10.1109/IDT.2014.7038583}}
 }
+
+@misc{virtual_platform,
+    author = {Cadence Design Systems, Inc.},
+    title = {Virtual Platform},
+    howpublished = {\url{https://www.cadence.com/en_US/home/explore/virtual-platform.html}}
+}
+
+@article{early_sw_development,
+    author = {Mu, Shunan and Pan, Guoqing and Tian, Zhihao and Feng, Jiancheng},
+    year = {2015},
+    month = {12},
+    pages = {},
+    title = {A Survey of Virtual Prototyping Techniques for System Development and Validation},
+    volume = {6},
+    journal = {International Journal of Computer Science and Engineering Survey},
+    doi = {10.5121/ijcses.2015.6602}
+}
+
+@phdthesis{perf_analysis,
+    author = {Björn Gottschall},
+    title = {Time-Proportional
+Performance Analysis for
+Out-of-Order Processors},
+    school = {Norwegian University of Science and Technology},
+    year = {2024}
+}
+
+@manual{riscv_manual,
+    title = {The RISC-V Instruction Set Manual
+Volume I: User-Level ISA},
+    author = {Andrew Waterman and Krste Asanovic},
+    year = {2017},
+    month = {5},
+    note = {Available at \url{https://riscv.org/wp-content/uploads/2017/05/riscv-spec-v2.2.pdf}},
+    edition = {2.2}
+}
+
+@misc{kcachegrind,
+    author = {Josef Weidendörfer},
+    title = {Cache Performance Analysis
+with Callgrind and KCachegrind},
+    howpublished = {\url{https://www.vi-hps.org/cms/upload/material/tw09/vi-hps-tw09-Kcachegrind.pdf}},
+    year = {2012},
+    month = {4}
+}
+
+@manual{pyelftools_manual,
+    author = {Eli Bendersky},
+    title = {pyelftools user's guide},
+    url = {https://github.com/eliben/pyelftools/wiki/User's-guide},
+    year = {2022},
+    month = {2}
+}
+
+@inbook{happens-before-relation,
+    author = {Lamport, Leslie},
+    title = {Time, clocks, and the ordering of events in a distributed system},
+    year = {2019},
+    isbn = {9781450372701},
+    publisher = {Association for Computing Machinery},
+    address = {New York, NY, USA},
+    url = {https://doi.org/10.1145/3335772.3335934},
+    booktitle = {Concurrency: The Works of Leslie Lamport},
+    pages = {179–196},
+    numpages = {18}
+}
+
+@article{lockset-algorithm,
+    author = {Savage, Stefan and Burrows, Michael and Nelson, Greg and Sobalvarro, Patrick and Anderson, Thomas},
+    title = {Eraser: a dynamic data race detector for multithreaded programs},
+    year = {1997},
+    issue_date = {Nov. 1997},
+    publisher = {Association for Computing Machinery},
+    address = {New York, NY, USA},
+    volume = {15},
+    number = {4},
+    issn = {0734-2071},
+    url = {https://doi.org/10.1145/265924.265927},
+    doi = {10.1145/265924.265927},
+    journal = {ACM Trans. Comput. Syst.},
+    month = {11},
+    pages = {391–411},
+    numpages = {21},
+    keywords = {race detection, multithreaded programming, binary code modification}
+}
+
+@inproceedings{vector-clocks,
+    author = {Flanagan, Cormac and Freund, Stephen N.},
+    title = {FastTrack: efficient and precise dynamic race detection},
+    year = {2009},
+    isbn = {9781605583921},
+    publisher = {Association for Computing Machinery},
+    address = {New York, NY, USA},
+    url = {https://doi.org/10.1145/1542476.1542490},
+    doi = {10.1145/1542476.1542490},
+    booktitle = {Proceedings of the 30th ACM SIGPLAN Conference on Programming Language Design and Implementation},
+    pages = {121–133},
+    numpages = {13},
+    keywords = {race conditions, dynamic analysis, concurrency},
+    location = {Dublin, Ireland},
+    series = {PLDI '09}
+}
+
+@phdthesis{cachegrind,
+    author = {Nethercote, Nicholas},
+    title = {Dynamic Binary Analysis and Instrumentation},
+    school = {University of Cambridge},
+    year = {2004},
+}
+
+@article{valgrind,
+    title = {Valgrind: A Program Supervision Framework},
+    journal = {Electronic Notes in Theoretical Computer Science},
+    volume = {89},
+    number = {2},
+    pages = {44-66},
+    year = {2003},
+    note = {RV '2003, Run-time Verification (Satellite Workshop of CAV '03)},
+    issn = {1571-0661},
+    doi = {https://doi.org/10.1016/S1571-0661(04)81042-9},
+    url = {https://www.sciencedirect.com/science/article/pii/S1571066104810429},
+    author = {Nicholas Nethercote and Julian Seward},
+}
+
+@manual{dwarf,
+    author = {Michael J. Eager},
+    title = {Introduction to the DWARF Debugging Format},
+    url = {https://dwarfstd.org/doc/Debugging%20using%20DWARF-2012.pdf},
+    year = {2012},
+    month = {8}
+}
+  
+
+
+  
 
