--- a/main.tex
+++ b/main.tex
@@ -16,10 +16,10 @@
 \newcommand*{\getSchool}{Computation, Information and Technology}
 \newcommand*{\getTitle}{Thesis title}
 \newcommand*{\getTitleGer}{Titel der Abschlussarbeit}
-\newcommand*{\getAuthor}{Author}
-\newcommand*{\getDoctype}{Bachelor's Thesis, Master's Thesis, \ldots}
-\newcommand*{\getSupervisor}{Supervisor}
-\newcommand*{\getAdvisor}{Advisor}
+\newcommand*{\getAuthor}{Liang-Ta Wei}
+\newcommand*{\getDoctype}{Master's Thesis}
+\newcommand*{\getSupervisor}{Philipp van Kempen}
+\newcommand*{\getAdvisor}{Prof. Dr.-Ing. Ulf Schlichtmann}
 \newcommand*{\getSubmissionDate}{Submission date}
 \newcommand*{\getSubmissionLocation}{Munich}
 
@@ -53,6 +53,12 @@
 
 \chapter{Implementation}
 \input{chapters/04_implementation}
+
+\chapter{Evaluation}
+\input{chapters/05_evaluation}
+
+\chapter{Summary}
+\input{chapters/06_summary}
 
 % TODO: add more chapters here
 
