--- a/settings.tex
+++ b/settings.tex
@@ -8,7 +8,7 @@
 \usepackage[%
   backend=biber,
   url=false,
-  style=alphabetic,
+  style=numeric,
   maxnames=4,
   minnames=3,
   maxbibnames=99,
@@ -17,6 +17,9 @@
 \usepackage{graphicx}
 \usepackage{scrhack} % necessary for listings package
 \usepackage{listings}
+\usepackage{algorithm}
+\usepackage{algorithmic}
+\usepackage{dirtree}
 \usepackage{lstautogobble}
 \usepackage{tikz}
 \usepackage{pgfplots}
