--- a/settings.tex
+++ b/settings.tex
@@ -17,6 +17,8 @@
 \usepackage{graphicx}
 \usepackage{scrhack} % necessary for listings package
 \usepackage{listings}
+\usepackage{float}
+\usepackage{multirow}
 \usepackage{algorithm}
 \usepackage{algorithmic}
 \usepackage{dirtree}
