--- a/settings.tex
+++ b/settings.tex
@@ -17,10 +17,12 @@
 \usepackage{graphicx}
 \usepackage{scrhack} % necessary for listings package
 \usepackage{listings}
+\usepackage{cleveref}
 \usepackage{float}
 \usepackage{multirow}
 \usepackage{algorithm}
 \usepackage{algorithmic}
+\usepackage{subcaption}
 \usepackage{dirtree}
 \usepackage{lstautogobble}
 \usepackage{tikz}
