--- a/pages/disclaimer.tex
+++ b/pages/disclaimer.tex
@@ -5,6 +5,6 @@ I confirm that this \MakeLowercase{\getDoctype{}} is my own work and I have docu
 
 \vspace{15mm}
 \noindent
-\getSubmissionLocation{}, \getSubmissionDate{} \hspace{\fill} \getAuthor{}
+\getSubmissionLocation{},  \hspace{\fill} 
 
 \cleardoublepage{}
